--- a/dir.common.props
+++ b/dir.common.props
@@ -51,7 +51,8 @@
 
   <PropertyGroup>
     <!-- Central place to set the versions of all nuget packages produced in the repo -->
-    <PackageVersion Condition="'$(PackageVersion)' == ''">6.0.0</PackageVersion>
+    <PackageVersion Condition="'$(PackageVersion)' == '' AND !Exists('$(ProjectDir)\artifacts\tmp\BuildRoot\version.txt')">1.0.0</PackageVersion>
+    <PackageVersion Condition="'$(PackageVersion)' == '' AND Exists('$(ProjectDir)\artifacts\tmp\BuildRoot\version.txt')">$([System.IO.File]::ReadAllText('artifacts\tmp\BuildRoot\version.txt'))</PackageVersion>
 
     <!-- Set the boolean below to true to generate packages with stabilized versions -->
     <StabilizePackageVersion Condition="'$(StabilizePackageVersion)' == ''">false</StabilizePackageVersion>
