Add explicit `-b` flags, as Windows doesn't build without it

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ stages:
           condition: and(succeeded(), eq(variables['installDependencies'], 'true'))
 
         - bash: |
-            ./build.sh --ci -r -c $(_BuildConfig)
+            ./build.sh --ci -r -b -c $(_BuildConfig)
           displayName: 'Build (Make)'
 
         - bash: |
@@ -96,7 +96,7 @@ stages:
           displayName: 'Prepare macOS dependencies'
 
         - bash: |
-            ./build.sh --ci -r -c $(_BuildConfig)
+            ./build.sh --ci -r -b -c $(_BuildConfig)
           displayName: 'Build (Make)'
 
         - bash: |
@@ -126,7 +126,7 @@ stages:
           displayName: 'Clean up working directory'
 
         - script: |
-            build.cmd --ci -r -c $(_BuildConfig)
+            build.cmd --ci -r -b -c $(_BuildConfig)
           displayName: 'Build (MSBuild)'
 
 #        - powershell: eng\common\build.ps1 -ci -restore -publish -configuration $(_BuildConfig) /p:DotNetPublishUsingPipelines=true /p:DotNetPublishToBlobFeed=true /p:DotNetPublishBlobFeedUrl=$(_DotNetFeedUrl) /p:DotNetPublishBlobFeedKey=$(dotnetfeed-storage-access-key-1) /p:DotNetArtifactsCategory=$(_DotNetArtifactsCategory) /p:AssetManifestOS=$(assetManifestOS) /p:PlatformName=$(assetManifestPlatform) -projects $(Build.SourcesDirectory)\eng\empty.csproj
