Explicitly build a nupkg on Windows

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,6 +129,10 @@ stages:
             build.cmd --ci -r -b -c $(_BuildConfig)
           displayName: 'Build (MSBuild)'
 
+        - script: |
+            build.cmd --ci --pack
+          displayName: 'Build nupkg'
+
 #        - powershell: eng\common\build.ps1 -ci -restore -publish -configuration $(_BuildConfig) /p:DotNetPublishUsingPipelines=true /p:DotNetPublishToBlobFeed=true /p:DotNetPublishBlobFeedUrl=$(_DotNetFeedUrl) /p:DotNetPublishBlobFeedKey=$(dotnetfeed-storage-access-key-1) /p:DotNetArtifactsCategory=$(_DotNetArtifactsCategory) /p:AssetManifestOS=$(assetManifestOS) /p:PlatformName=$(assetManifestPlatform) -projects $(Build.SourcesDirectory)\eng\empty.csproj
 #          displayName: Publish packages
 #          condition: and(succeeded(), ne(variables['System.TeamProject'], 'public'), ne(variables['Build.Reason'], 'PullRequest'))
