Use long-form build.sh args

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ stages:
           condition: and(succeeded(), eq(variables['installDependencies'], 'true'))
 
         - bash: |
-            ./build.sh --ci -r -b -c $(_BuildConfig)
+            ./build.sh --ci --restore --build -c $(_BuildConfig)
           displayName: 'Build (Make)'
 
         - bash: |
@@ -96,7 +96,7 @@ stages:
           displayName: 'Prepare macOS dependencies'
 
         - bash: |
-            ./build.sh --ci -r -b -c $(_BuildConfig)
+            ./build.sh --ci --restore --build -c $(_BuildConfig)
           displayName: 'Build (Make)'
 
         - bash: |
@@ -126,7 +126,7 @@ stages:
           displayName: 'Clean up working directory'
 
         - script: |
-            build.cmd --ci -r -b -c $(_BuildConfig)
+            build.cmd --ci --restore --build -c $(_BuildConfig)
           displayName: 'Build (MSBuild)'
 
         - script: |
