--- a/nuget/packaging.props
+++ b/nuget/packaging.props
@@ -4,6 +4,7 @@
   <PropertyGroup>
     <PackageDescriptionFile>$(MSBuildThisFileDirectory)/descriptions.json</PackageDescriptionFile>
     <PackageLicenseFile>$(RepoRoot)/LICENSE.TXT</PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageThirdPartyNoticesFile>$(RepoRoot)/THIRD-PARTY-NOTICES.TXT</PackageThirdPartyNoticesFile>
 
     <ReleaseNotes>https://go.microsoft.com/fwlink/?LinkID=799421</ReleaseNotes>
