Try and build using MCR Centos container (#16)
* Try and build using MCR Centos container

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,22 +37,16 @@ stages:
               poolname: Hosted Ubuntu 1604
               assetManifestOS: linux
               assetManifestPlatform: x64
-              installDependencies: true
         pool:
           name: $(poolname)
+        container:
+          image: mcr.microsoft.com/dotnet-buildtools/prereqs:centos-7-bfcd90a-20200121150017
         steps:
         - bash: |
             set -ex
             git clean -ffdx
             git reset --hard HEAD
           displayName: 'Clean up working directory'
-
-        - bash: |
-            set -ex
-            sudo apt update
-            sudo apt -y install build-essential libtool libtool-bin cmake gettext
-          displayName: 'Install Linux dependencies'
-          condition: and(succeeded(), eq(variables['installDependencies'], 'true'))
 
         - bash: |
             ./build.sh --ci --restore --build --pack --configuration $(_BuildConfig) $(_InternalBuildArgs)
